force-app/src/objects/c2g__codaTextDefinition__c.object
<CustomObject>
    <customHelpPage>c2g__codahelptextdefitintion</customHelpPage>
    <description>Stores predefined, reusable snippets of text that can be included on a sales invoice or credit note.</description>
    <fields>
        <fullName>c2g__AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNote__c</fullName>
        <label>Credit Note</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Used</fullName>
                    <default>true</default>
                    <label>Not Used</label>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Heading__c</fullName>
        <label>Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Invoice__c</fullName>
        <label>Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Used</fullName>
                    <default>true</default>
                    <label>Not Used</label>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Text Definitions</relationshipLabel>
        <relationshipName>TextDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TextPosition__c</fullName>
        <label>Text Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Text__c</fullName>
        <label>Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Text Definition</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaTextDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaTextDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Heading__c</columns>
        <columns>c2g__Invoice__c</columns>
        <columns>c2g__CreditNote__c</columns>
        <columns>c2g__TextPosition__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Text Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Text Definitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>